--- a/pages/psp/psp.html
+++ b/pages/psp/psp.html
@@ -130,20 +130,19 @@
       <input type="checkbox" id="menu" name="menu" class="m-menu__checkbox" checked>
 <div class="m-menu">
 <div class="m-menu__header">
-<a href="https://hv-leaf.github.io/Ch3at/pages/nintendo.html" rel="noopener noreferrer">
+<a href="https://hv-leaf.github.io/Ch3at/pages/sony.html" rel="noopener noreferrer">
   <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs">
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
-
-<!-- nes # -->
+<!-- psp # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +151,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End psp #-->
 
 
-<!-- nes a -->
+<!-- psp a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +167,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End psp a-->
 
-<!-- nes b -->
+<!-- psp b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +182,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End psp b-->
 
-<!-- nes c -->
+<!-- psp c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +197,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End psp c-->
 
-<!-- nes d -->
+<!-- psp d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +212,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End psp d-->
+<!-- psp e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +226,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End psp e-->
 
-<!-- nes f -->
+<!-- psp f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +241,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End psp f-->
 
-<!-- nes g -->
+<!-- psp g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +256,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End psp g-->
 
-<!-- nes h -->
+<!-- psp h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +271,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End psp h-->
 
-<!-- nes i -->
+<!-- psp i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +286,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End psp i-->
 
-<!-- nes j -->
+<!-- psp j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +301,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End psp j-->
 
-<!-- nes k -->
+<!-- psp k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +316,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End psp k-->
 
-<!-- nes l -->
+<!-- psp l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +331,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End psp l-->
 
-<!-- nes m -->
+<!-- psp m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +346,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End psp m-->
 
-<!-- nes n -->
+<!-- psp n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +361,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End psp n-->
 
-<!-- nes o -->
+<!-- psp o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +376,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End psp o-->
 
-<!-- nes p -->
+<!-- psp p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +391,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End psp p-->
 
-<!-- nes q -->
+<!-- psp q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +406,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End psp q-->
 
-<!-- nes r -->
+<!-- psp r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +421,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End psp r-->
 
-<!-- nes s -->
+<!-- psp s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +436,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End psp s-->
 
-<!-- nes t -->
+<!-- psp t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +451,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End psp t-->
 
-<!-- nes u -->
+<!-- psp u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +466,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End psp u-->
 
-<!-- nes v -->
+<!-- psp v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +481,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End psp v-->
 
-<!-- nes w -->
+<!-- psp w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +496,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End psp w-->
 
-<!-- nes x -->
+<!-- psp x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +511,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End psp x-->
 
-<!-- nes y -->
+<!-- psp y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +526,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End psp y-->
 
-<!-- nes z -->
+<!-- psp z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +541,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End psp z-->
     
  <br></br><br></br></ul>
   </div>
