--- a/pages/ps4/ps4.html
+++ b/pages/ps4/ps4.html
@@ -130,20 +130,19 @@
       <input type="checkbox" id="menu" name="menu" class="m-menu__checkbox" checked>
 <div class="m-menu">
 <div class="m-menu__header">
-<a href="https://hv-leaf.github.io/Ch3at/pages/nintendo.html" rel="noopener noreferrer">
+<a href="https://hv-leaf.github.io/Ch3at/pages/sony.html" rel="noopener noreferrer">
   <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs">
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
 
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
-
-<!-- nes # -->
+<!-- ps4 # -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/09.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(#)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -152,14 +151,14 @@
     </a>
     </ul>
 </li>
-<!-- End nes #-->
+<!-- End ps4 #-->
 
 
-<!-- nes a -->
+<!-- ps4 a -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/a.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(a)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -168,13 +167,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes a-->
+<!-- End ps4 a-->
 
-<!-- nes b -->
+<!-- ps4 b -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/b.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(b)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -183,13 +182,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes b-->
+<!-- End ps4 b-->
 
-<!-- nes c -->
+<!-- ps4 c -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(c)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/c.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(c)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -198,13 +197,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes c-->
+<!-- End ps4 c-->
 
-<!-- nes d -->
+<!-- ps4 d -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(d)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/d.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(d)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -213,12 +212,12 @@
     </a>
     </ul>
 </li>
-<!-- End nes d-->
-<!-- nes e -->
+<!-- End ps4 d-->
+<!-- ps4 e -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(e)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/e.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(e)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -227,13 +226,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes e-->
+<!-- End ps4 e-->
 
-<!-- nes f -->
+<!-- ps4 f -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(f)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/f.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(f)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -242,13 +241,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes f-->
+<!-- End ps4 f-->
 
-<!-- nes g -->
+<!-- ps4 g -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(g)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/g.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(g)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -257,13 +256,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes g-->
+<!-- End ps4 g-->
 
-<!-- nes h -->
+<!-- ps4 h -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(h)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/h.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(h)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -272,13 +271,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes h-->
+<!-- End ps4 h-->
 
-<!-- nes i -->
+<!-- ps4 i -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(i)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/i.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(i)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -287,13 +286,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes i-->
+<!-- End ps4 i-->
 
-<!-- nes j -->
+<!-- ps4 j -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(j)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/j.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(j)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -302,13 +301,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes j-->
+<!-- End ps4 j-->
 
-<!-- nes k -->
+<!-- ps4 k -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(k)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/k.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(k)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -317,13 +316,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes k-->
+<!-- End ps4 k-->
 
-<!-- nes l -->
+<!-- ps4 l -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(l)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/l.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(l)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -332,13 +331,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes l-->
+<!-- End ps4 l-->
 
-<!-- nes m -->
+<!-- ps4 m -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(m)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/m.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(m)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -347,13 +346,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes m-->
+<!-- End ps4 m-->
 
-<!-- nes n -->
+<!-- ps4 n -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(n)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/n.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(n)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -362,13 +361,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes n-->
+<!-- End ps4 n-->
 
-<!-- nes o -->
+<!-- ps4 o -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(o)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/o.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(o)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -377,13 +376,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes o-->
+<!-- End ps4 o-->
 
-<!-- nes p -->
+<!-- ps4 p -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(p)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/p.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(p)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -392,13 +391,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes p-->
+<!-- End ps4 p-->
 
-<!-- nes q -->
+<!-- ps4 q -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(q)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/q.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(q)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -407,13 +406,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes q-->
+<!-- End ps4 q-->
 
-<!-- nes r -->
+<!-- ps4 r -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(r)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/r.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(r)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -422,13 +421,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes r-->
+<!-- End ps4 r-->
 
-<!-- nes s -->
+<!-- ps4 s -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(s)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/s.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(s)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -437,13 +436,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes s-->
+<!-- End ps4 s-->
 
-<!-- nes t -->
+<!-- ps4 t -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(t)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/t.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(t)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -452,13 +451,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes t-->
+<!-- End ps4 t-->
 
-<!-- nes u -->
+<!-- ps4 u -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(u)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/u.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(u)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -467,13 +466,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes u-->
+<!-- End ps4 u-->
 
-<!-- nes v -->
+<!-- ps4 v -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(v)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/v.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(v)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -482,13 +481,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes v-->
+<!-- End ps4 v-->
 
-<!-- nes w -->
+<!-- ps4 w -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(w)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/w.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(w)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -497,13 +496,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes w-->
+<!-- End ps4 w-->
 
-<!-- nes x -->
+<!-- ps4 x -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(x)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/x.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(x)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -512,13 +511,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes x-->
+<!-- End ps4 x-->
 
-<!-- nes y -->
+<!-- ps4 y -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(y)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/y.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(y)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -527,13 +526,13 @@
     </a>
     </ul>
 </li>
-<!-- End nes y-->
+<!-- End ps4 y-->
 
-<!-- nes z -->
+<!-- ps4 z -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128> <alph>(z)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/z.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128> <alph>(z)</alph>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -542,7 +541,7 @@
     </a>
     </ul>
 </li>
-<!-- End nes z-->
+<!-- End ps4 z-->
     
  <br></br><br></br></ul>
   </div>
