--- a/pages/sega.html
+++ b/pages/sega.html
@@ -163,14 +163,14 @@
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/microsoft.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sega.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-<!-- Xbox -->
+<!-- Genesis -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/xbox.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/genesis/genesis.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/genesis/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -179,13 +179,13 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox -->
+<!-- End Genesis -->
 
-<!-- Xbox 360 -->
+<!-- Game Gear -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox360/xbox360.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox360/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/gamegear.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -194,13 +194,13 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox 360 -->
+<!-- Game Gear -->
 
-<!-- Xbox One -->
+<!-- Saturn -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xboxone/xboxone.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xboxone/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/saturn/saturn.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/saturn/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -209,12 +209,25 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox One -->
+<!-- Saturn -->
 
+     <!-- Dreamcast -->
+<li>
+  <label>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/dreamcast/dreamcast.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/dreamcast/logo.png" height=32 width=128>
+  <div class="m-menu">
+    <div class="m-menu__header">
+  </label>
+    </div>
+    <ul>
+    </a>
+    </ul>
+</li>
+<!-- Dreamcast -->
     <br></br><br></br></ul>
   </div>
 </li>
-<!-- End Microsoft Company -->
 
 <script>
   document.addEventListener('copy', function (e) {
