--- a/index.html
+++ b/index.html
@@ -210,26 +210,11 @@
 </li>
 <!--Nintendo-->
 
-<!-- Sega Company -->
-<li>
-  <label class="a-label__chevron" for="sega">
-    <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sega.png" height=32 width=128>
-  </label>
-  <input type="checkbox" id="sega" name="sega" class="m-menu__checkbox">
-  <div class="m-menu">
-    <div class="m-menu__header">
-      <label class="m-menu__toggle" for="sega">
-        <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg>
-      </label>
-      <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sega.png" height=32 width=128></span>
-    </div>
-    <ul>
-
-<!-- Genesis -->
+<!--Sega-->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/genesis/genesis.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/genesis/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/sega.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sega.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -238,78 +223,19 @@
     </a>
     </ul>
 </li>
-<!-- End Genesis -->
-
-<!-- Game Gear -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/gamegear.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
-  </label>
     </div>
     <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Game Gear -->
-
-<!-- Saturn -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/saturn/saturn.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/saturn/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Saturn -->
-
-<!-- DreamCast -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/dreamcast/dreamcast.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/dreamcast/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End DreamCast -->
-
-    <br></br><br></br></ul>
   </div>
 </li>
-<!-- End Sega Company -->
+<!--Sega-->
 
-<!-- Sony Company -->
-<li>
-  <label class="a-label__chevron" for="Sony">
-    <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sony.png" height=32 width=128>
-  </label>
-  <input type="checkbox" id="Sony" name="Sony" class="m-menu__checkbox">
-  <div class="m-menu">
-    <div class="m-menu__header">
-      <label class="m-menu__toggle" for="Sony">
-        <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg>
-      </label>
-      <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sony.png" height=32 width=128></span>
-    </div>
-    <ul>
-
-<!-- PS1 -->
+<!--Sony-->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/ps1/ps1.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=64 width=64>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/sony.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/sony.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -318,103 +244,13 @@
     </a>
     </ul>
 </li>
-<!-- End PS1 -->
-
-<!-- PS2 -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/ps2.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
-  </label>
     </div>
     <ul>
-    </a>
-    </ul>
-</li>
-<!-- End PS2 -->
-
-<!-- PSP -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/psp.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End PSP -->
-
-<!-- PS3 -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/ps3/ps3.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps3/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End PS3 -->
-
-<!-- PS Vita -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/psvita/psvita.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psvita/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End PS Vita -->
-
-<!-- PS4 -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/ps4.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End PS4 -->
-
-<!-- PS5 -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/ps5.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End PS5 -->
-
-
-    <br></br><br></br></ul>
   </div>
 </li>
-<!-- End Sony Company -->
+<!--Sony-->
 
 <script>
   document.addEventListener('copy', function (e) {
